hotfix for double slashes

--- a/_includes/graphtags.html
+++ b/_includes/graphtags.html
@@ -20,11 +20,11 @@
   <meta content="{{ site.description }}" property="og:description">
 {% endif %}
 {% if page.url %}
-  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+  <meta content="{{ site.urlm }}{{ page.url }}" property="og:url">
 {% endif %}
 {% if page.date %}
   <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-  <meta content="{{ site.url }}/about/" property="article:author">
+  <meta content="{{ site.urlm }}/about/" property="article:author">
 {% endif %}
 {% if page.image %}
   <meta content="{{ site.url }}assets/dist/img/vwsrc-art.png" property="og:image">
