--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,10 +14,10 @@
       </svg>
     </a>
   </div>
-  <ul class="site--nav_list flex--child_12 flex">
-    <li class="site--nav_item flex--child_sm1"><a class="caps lt-2 w-700" href="{{ '/about/' | prepend: site.baseurl }}">About</a></li>
-    <li class="site--nav_item flex--child_sm1"><a class="caps lt-2 w-700" href="{{ '/episodes/' | prepend: site.baseurl }}">Episodes</a></li>
-    <li class="site--nav_item flex--child_sm1"><a class="caps lt-2 w-700" href="{{ '/contact/' | prepend: site.baseurl }}">Contact</a></li>
+  <ul class="site--nav_list flex--child_9 flex">
+    <li class="site--nav_item"><a class="caps lt-2 w-700" href="{{ '/about/' | prepend: site.baseurl }}">About</a></li>
+    <li class="site--nav_item"><a class="caps lt-2 w-700" href="{{ '/episodes/' | prepend: site.baseurl }}">Episodes</a></li>
+    <li class="site--nav_item"><a class="caps lt-2 w-700" href="{{ '/contact/' | prepend: site.baseurl }}">Contact</a></li>
     <!-- <li class="site--nav_item flex--child_sm1"><a class="caps lt-2 w-700" href="">Sponsor</a></li> -->
   </ul>
 </nav>
