--- a/_includes/hosts.html
+++ b/_includes/hosts.html
@@ -69,9 +69,30 @@
         </a>
       </div>
     </div>
-    <div class="host flex--child_1">
-      <p><strong class="caps lt-2">Maybe You?</strong></p>
-      <p><em class="caps lt-2">Get in touch we'd love to have you!</em></p>
-    </div>
+    <div class="host center flex--child_1">
+      <img class="host--img" src="assets/dist/img/lara.jpg" alt="">
+      <p class="left"><strong class="caps lt-2"><a href="http://notlaura.com/">Lara Schenck</a></strong> independent web consultant and educator living in NYC. She specializes in Wordpress, Sass and cocktails.</p>
+      <div class="host--icons">
+        <a href="http://codepen.io/laras126/">
+          <svg class="icon">
+            <use xlink:href="#icon-social_codepen" />
+          </svg>
+        </a>
+        <a href="https://dribbble.com/bradcerasani">
+          <svg class="icon">
+            <use xlink:href="#icon-social_dribbble" />
+          </svg>
+        </a>
+        <a href="http://github.com/laras126">
+          <svg class="icon">
+            <use xlink:href="#icon-social_githubalt" />
+          </svg>
+        </a>
+        <a href="https://twitter.com/laras126">
+          <svg class="icon">
+            <use xlink:href="#icon-social_twitter" />
+          </svg>
+        </a>
+      </div>
   </div>
 </section>
