fix for @laras126

--- a/_includes/hosts.html
+++ b/_includes/hosts.html
@@ -71,16 +71,11 @@
     </div>
     <div class="host center flex--child_1">
       <img class="host--img" src="assets/dist/img/lara.jpg" alt="">
-      <p class="left"><strong class="caps lt-2"><a href="http://notlaura.com/">Lara Schenck</a></strong> independent web consultant and educator living in NYC. She specializes in Wordpress, Sass and cocktails.</p>
+      <p class="left"><strong class="caps lt-2"><a href="http://notlaura.com/">Lara Schenck</a></strong> independent web consultant and educator living in NYC. She specializes in WordPress, Sass and cocktails.</p>
       <div class="host--icons">
         <a href="http://codepen.io/laras126/">
           <svg class="icon">
             <use xlink:href="#icon-social_codepen" />
-          </svg>
-        </a>
-        <a href="https://dribbble.com/bradcerasani">
-          <svg class="icon">
-            <use xlink:href="#icon-social_dribbble" />
           </svg>
         </a>
         <a href="http://github.com/laras126">
